--- a/multitun.conf
+++ b/multitun.conf
@@ -3,7 +3,7 @@
 
 [all]
 # Server IP address and port
-serv_addr = 192.168.1.2
+serv_addr = 125.253.92.50
 serv_port = 80
 serv_tun_addr = 10.10.0.1
 
@@ -35,7 +35,7 @@ p2paddr = 10.10.0.2
 webdir = ./html
 
 # Authentication is IP/passwords in Python dict format
-users = {'10.10.0.2': 'pass1', '10.10.0.3': 'pass2', '10.10.0.4': 'pass3'}
+users = {'10.10.0.2': 'mentalx', '10.10.0.3': 'pass2', '10.10.0.4': 'pass3'}
 
 [client]
 tun_dev = tun0
